--- a/src/components/Friends/friends.module.css
+++ b/src/components/Friends/friends.module.css
@@ -4,8 +4,9 @@
   height: 10px;
   border-radius: 50%;
   background-color: green;
+  margin-top: 20px;
+  margin-right: 20px;
 }
-
 .offline {
   align-items: center;
   display: block;
@@ -13,8 +14,25 @@
   background-color: red;
   width: 10px;
   height: 10px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
-
 li {
   list-style-type: none;
+}
+.friendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.item {
+  display: flex;
+  padding: 20px;
+  border: 1px solid rgb(131, 131, 131);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
+  width: 200px;
+}
+.name {
+  margin-left: 20px;
 }
