--- a/src/components/Statistic/statistic.module.css
+++ b/src/components/Statistic/statistic.module.css
@@ -7,18 +7,18 @@
   max-width: 100%;
 }
 .title {
-  padding: 10px 10px 10px 10px;
   margin: 0;
   color: black;
   font-size: 20px;
   text-transform: uppercase;
 }
 .stat__list {
+  border: 1px solid rgb(131, 131, 131);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   padding: 0;
   display: inline-flex;
 }
 .item {
-  border: black solid 1px;
   padding: 10px;
   display: flex;
   flex-direction: column;
